Implementação do banner do header, e lista de produtos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <title>Layout E-Commerce</title>
     </head>
     <body>
@@ -28,8 +29,305 @@
                 </div>
             </nav>
             <div class="container">
-
+                <div class="box-banner">
+                    <div class="resumo">
+                        <h1>Oculus Quest 2</h1>
+                        <p>
+                            Sem fios, um mundo de experiências, e agora duas vezes o
+                            armazenamento. Apresentando a nova geração do Oculus Quest 2
+                            com 128gb de armazenamento.
+                        </p>
+                        <button class="btn-banner">
+                            Saiba Mais
+                        </button>
+                    </div>
+                    <div class="img-produto-banner">
+                        <img src="assets/img/oculus.png" alt="">
+                    </div>
+                </div>
             </div>
         </header>
+        <main>
+            <div class="container mt-1">
+                <div class="row p-1">
+                    <div class="coluna p-1">
+                        <div class="card-produto">
+                            <img src="assets/img/6.jpg" class="pt-1 pb-1">
+                            <p>
+                                Smartphone Samsung Galaxy S21 128GB 5G Wi-Fi Tela 6.2 
+                                Dual Chip 8GB RAM Câmera Tripla + Selfie 10MP
+                            </p>
+                            <div class="box-price mt-1">
+                                <div class="classificacao">                                    
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="price">
+                                    R$ 2.189,99
+                                </div>                                
+                            </div>
+                            <div class="buttons mt-2">
+                                <button>Carrinho</button>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="coluna p-1">
+                        <div class="card-produto">
+                            <img src="assets/img/1.jpg" class="pt-1 pb-1">
+                            <p>
+                                Smartphone Samsung Galaxy S21 128GB 5G Wi-Fi Tela 6.2 
+                                Dual Chip 8GB RAM Câmera Tripla + Selfie 10MP
+                            </p>
+                            <div class="box-price mt-1">
+                                <div class="classificacao">                                    
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="price">
+                                    R$ 2.189,99
+                                </div>                                
+                            </div>
+                            <div class="buttons mt-2">
+                                <button>Carrinho</button>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="coluna p-1">
+                        <div class="card-produto">
+                            <img src="assets/img/14.jpg" class="pt-1 pb-1">
+                            <p>
+                                Smartphone Samsung Galaxy S21 128GB 5G Wi-Fi Tela 6.2 
+                                Dual Chip 8GB RAM Câmera Tripla + Selfie 10MP
+                            </p>
+                            <div class="box-price mt-1">
+                                <div class="classificacao">                                    
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="price">
+                                    R$ 2.189,99
+                                </div>                                
+                            </div>
+                            <div class="buttons mt-2">
+                                <button>Carrinho</button>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="coluna p-1">
+                        <div class="card-produto">
+                            <img src="assets/img/2.jpg" class="pt-1 pb-1">
+                            <p>
+                                Smartphone Samsung Galaxy S21 128GB 5G Wi-Fi Tela 6.2 
+                                Dual Chip 8GB RAM Câmera Tripla + Selfie 10MP
+                            </p>
+                            <div class="box-price mt-1">
+                                <div class="classificacao">                                    
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="price">
+                                    R$ 2.189,99
+                                </div>                                
+                            </div>
+                            <div class="buttons mt-2">
+                                <button>Carrinho</button>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="coluna p-1">
+                        <div class="card-produto">
+                            <img src="assets/img/18.jpg" class="pt-1 pb-1">
+                            <p>
+                                Smartphone Samsung Galaxy S21 128GB 5G Wi-Fi Tela 6.2 
+                                Dual Chip 8GB RAM Câmera Tripla + Selfie 10MP
+                            </p>
+                            <div class="box-price mt-1">
+                                <div class="classificacao">                                    
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="price">
+                                    R$ 2.189,99
+                                </div>                                
+                            </div>
+                            <div class="buttons mt-2">
+                                <button>Carrinho</button>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="coluna p-1">
+                        <div class="card-produto">
+                            <img src="assets/img/19.jpg" class="pt-1 pb-1">
+                            <p>
+                                Smartphone Samsung Galaxy S21 128GB 5G Wi-Fi Tela 6.2 
+                                Dual Chip 8GB RAM Câmera Tripla + Selfie 10MP
+                            </p>
+                            <div class="box-price mt-1">
+                                <div class="classificacao">                                    
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="price">
+                                    R$ 2.189,99
+                                </div>                                
+                            </div>
+                            <div class="buttons mt-2">
+                                <button>Carrinho</button>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="coluna p-1">
+                        <div class="card-produto">
+                            <img src="assets/img/22.jpg" class="pt-1 pb-1">
+                            <p>
+                                Smartphone Samsung Galaxy S21 128GB 5G Wi-Fi Tela 6.2 
+                                Dual Chip 8GB RAM Câmera Tripla + Selfie 10MP
+                            </p>
+                            <div class="box-price mt-1">
+                                <div class="classificacao">                                    
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="price">
+                                    R$ 2.189,99
+                                </div>                                
+                            </div>
+                            <div class="buttons mt-2">
+                                <button>Carrinho</button>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="coluna p-1">
+                        <div class="card-produto">
+                            <img src="assets/img/23.jpg" class="pt-1 pb-1">
+                            <p>
+                                Smartphone Samsung Galaxy S21 128GB 5G Wi-Fi Tela 6.2 
+                                Dual Chip 8GB RAM Câmera Tripla + Selfie 10MP
+                            </p>
+                            <div class="box-price mt-1">
+                                <div class="classificacao">                                    
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="price">
+                                    R$ 2.189,99
+                                </div>                                
+                            </div>
+                            <div class="buttons mt-2">
+                                <button>Carrinho</button>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="coluna p-1">
+                        <div class="card-produto">
+                            <img src="assets/img/24.jpg" class="pt-1 pb-1">
+                            <p>
+                                Smartphone Samsung Galaxy S21 128GB 5G Wi-Fi Tela 6.2 
+                                Dual Chip 8GB RAM Câmera Tripla + Selfie 10MP
+                            </p>
+                            <div class="box-price mt-1">
+                                <div class="classificacao">                                    
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="price">
+                                    R$ 2.189,99
+                                </div>                                
+                            </div>
+                            <div class="buttons mt-2">
+                                <button>Carrinho</button>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="coluna p-1">
+                        <div class="card-produto">
+                            <img src="assets/img/25.jpg" class="pt-1 pb-1">
+                            <p>
+                                Smartphone Samsung Galaxy S21 128GB 5G Wi-Fi Tela 6.2 
+                                Dual Chip 8GB RAM Câmera Tripla + Selfie 10MP
+                            </p>
+                            <div class="box-price mt-1">
+                                <div class="classificacao">                                    
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="price">
+                                    R$ 2.189,99
+                                </div>                                
+                            </div>
+                            <div class="buttons mt-2">
+                                <button>Carrinho</button>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="coluna p-1">
+                        <div class="card-produto">
+                            <img src="assets/img/27.jpg" class="pt-1 pb-1">
+                            <p>
+                                Smartphone Samsung Galaxy S21 128GB 5G Wi-Fi Tela 6.2 
+                                Dual Chip 8GB RAM Câmera Tripla + Selfie 10MP
+                            </p>
+                            <div class="box-price mt-1">
+                                <div class="classificacao">                                    
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class="price">
+                                    R$ 2.189,99
+                                </div>                                
+                            </div>
+                            <div class="buttons mt-2">
+                                <button>Carrinho</button>
+                                <button>Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </main>
     </body>
 </html>
