Implementação de background no header e no footer e responsividade do header de 300 até 578px

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Layout E-Commerce</title>
     </head>
     <body>
-        <header>
+        <header class="mb-3">
             <nav>
                 <div class="box_ico">
                     <div class="ico_menu">
@@ -486,7 +486,7 @@
                 </div>
             </div>
         </main>
-        <footer class="bg-01">
+        <footer class="bg-012">
             <div class="container pt-3 pb-3">
                 <div class="row">
                     <div class="coluna p-1">
